--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install python3 python3-pip python2 lzma cpio aria2 tmate neofetch speedtest-cli -y
+          sudo ln -sf /usr/bin/pip3 /usr/bin/pip
 
       - name: Clone the HomeBot Repo
         run: |
