--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,12 @@ jobs:
       - name: Install Packages
         run: |
           sudo apt update
-          sudo apt install python3 python3-pip python2 lzma cpio aria2 tmate neofetch speedtest-cli -y
+          sudo apt install python3.9 python3-pip python2 lzma cpio aria2 tmate neofetch speedtest-cli -y
           sudo ln -sf /usr/bin/pip3 /usr/bin/pip
 
       - name: Clone the HomeBot Repo
         run: |
-          git clone ${{ secrets.PRIVATE_REPO }} ~/HomeBot
+          git clone ${{ secrets.PRIVATE_REPO }} HomeBot
       
       - name: Run the Bot
         working-directory: HomeBot
