--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,9 @@ jobs:
       - name: Install Packages
         run: |
           sudo apt update
-          sudo apt install python3.9 python3-pip python2 lzma cpio aria2 tmate neofetch speedtest-cli -y
+          sudo apt install python3.9 python3-pip lzma cpio aria2 tmate neofetch speedtest-cli -y
           sudo ln -sf /usr/bin/pip3 /usr/bin/pip
+          sudo ln -sf /usr/bin/python3.9 /usr/bin/python3
 
       - name: Clone the HomeBot Repo
         run: |
