--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
       
       - name: Run the Bot
         working-directory: HomeBot
+        continue-on-error: true
         run: |
           pip install .
           python3 -m homebot
