Set Bot's Timeout to 5hr40m
Signed-off-by: Sushrut1101 <guptasushrut@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Run the Bot
         working-directory: HomeBot
         continue-on-error: true
+        timeout-minutes: 340
         run: |
           pip install .
           python3 -m homebot
