--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy
 
 on:
   push:
-    branches: [ master ]
-    paths-ignore: 'README.md'
+    branches:
+      - master
   workflow_dispatch:
    
 env:
